--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,13 +9,13 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    
+
     steps:
       - uses: actions/checkout@v4
-      
+
       - uses: actions/setup-node@v4
         with:
-          node-version: ${{ 21.x }}
+          node-version: "21.x"
           check-latest: true
 
       - name: Install dependencies
@@ -23,4 +23,3 @@ jobs:
 
       - name: Run tests
         run: npm test
-  
